// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuantityPicker stories snapshot > AtMaximum story renders and matches snapshot 1`] = `
<div
  class="inline-flex items-center border border-input rounded-none"
>
  <button
    aria-label="Decrement Quantity for the product"
    class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
    data-testid="quantity-decrement"
  >
    −
  </button>
  <input
    aria-label="Quantity"
    class="w-9 text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
    max="5"
    min="0"
    step="1"
    type="number"
    value="5"
  />
  <button
    aria-label="Increment Quantity for the product"
    class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
    data-testid="quantity-increment"
    disabled=""
  >
    +
  </button>
</div>
`;

exports[`QuantityPicker stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  class="inline-flex items-center border border-input rounded-none"
>
  <button
    aria-label="Decrement Quantity for the product"
    class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
    data-testid="quantity-decrement"
    disabled=""
  >
    −
  </button>
  <input
    aria-label="Quantity"
    class="w-9 text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
    min="0"
    step="1"
    type="number"
    value="1"
  />
  <button
    aria-label="Increment Quantity for the product"
    class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
    data-testid="quantity-increment"
  >
    +
  </button>
</div>
`;

exports[`QuantityPicker stories snapshot > Disabled story renders and matches snapshot 1`] = `
<div
  class="inline-flex items-center border border-input rounded-none"
>
  <button
    aria-label="Decrement Quantity for the product"
    class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
    data-testid="quantity-decrement"
    disabled=""
  >
    −
  </button>
  <input
    aria-label="Quantity"
    class="w-9 text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
    disabled=""
    min="0"
    step="1"
    type="number"
    value="3"
  />
  <button
    aria-label="Increment Quantity for the product"
    class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
    data-testid="quantity-increment"
    disabled=""
  >
    +
  </button>
</div>
`;

exports[`QuantityPicker stories snapshot > Interactive story renders and matches snapshot 1`] = `
<div
  class="inline-flex items-center border border-input rounded-none"
>
  <button
    aria-label="Decrement Quantity for Test Product"
    class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
    data-testid="quantity-decrement"
  >
    −
  </button>
  <input
    aria-label="Quantity"
    class="w-9 text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
    min="0"
    step="1"
    type="number"
    value="5"
  />
  <button
    aria-label="Increment Quantity for Test Product"
    class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
    data-testid="quantity-increment"
  >
    +
  </button>
</div>
`;
